<resources>
    <string name="app_name">Search for words</string>
    <string name="enter_the_word_to_search">enter the word to search</string>
    <string name="textview1">TextView</string>
    <string name="requesting_data">requesting data</string>
    <string name="find_words_in_the_text">find words in the text</string>
    <string name="enter_your_text_here">enter your text here</string>
    <string name="send_text">send text</string>
    <string name="textview2">TextView</string>
    <string name="greeting">Hi, let\'s find and count the words!</string>
    <string name="greeting1">Привет!</string>
</resources>